@startuml

title __SERVICE's Class Diagram__\n

    namespace Resources.service {
      interface resources.service.AbstractFactoryData {
          {abstract} + createDAOClient()
          {abstract} + createDAOEpisodi()
          {abstract} + createDAOFollowers()
          {abstract} + createDAOFollowing()
          {abstract} + createDAOMyList()
          {abstract} + createDAOPost()
          {abstract} + createDAOSerie()
          {abstract} + createDAOTemporada()
          {abstract} + createDAOUsuari()
          {abstract} + createDAOValoracioEstrella()
          {abstract} + createDAOValoracioThumb()
          {abstract} + createDAOWatching()
      }
    }


    namespace Resources.service {
      class resources.service.DataService {
          + DataService()
          + addClient()
          + addUsuari()
          + finishWatching()
          + getAllClients()
          + getAllEpisodis()
          + getAllPosts()
          + getAllSeries()
          + getAllTemporades()
          + getAllUsuaris()
          + getAllValoracionsEstrella()
          + getAllValoracionsThumb()
          + getClientByUsuariAndPassword()
          + getEpisodisbyTemporada()
          + getFollowersForUsuari()
          + getFollowingForUsuari()
          + getMyListForUsuari()
          + getTemporadesBySerie()
          + getUsuarisByClient()
          + getValoracioEstrella()
          + getValoracioThumb()
          + getWatchingForUsuari()
          + isTakenUsernameU()
          + isTakenUsernameUsername()
          + markInMyList()
          + pauseWatching()
          + setValoracioEstrella()
          + setValoracioThumb()
          + startWatching()
          + unmarkInMyList()
      }
    }

    namespace esources.service {
      class resources.service.FactoryMOCK {
          + createDAOClient()
          + createDAOEpisodi()
          + createDAOFollowers()
          + createDAOFollowing()
          + createDAOMyList()
          + createDAOPost()
          + createDAOSerie()
          + createDAOTemporada()
          + createDAOUsuari()
          + createDAOValoracioEstrella()
          + createDAOValoracioThumb()
          + createDAOWatching()
      }
    }


  resources.service.DataService o-- resources.dao.DAOEpisodi : EpisodiDAO
  resources.service.DataService o-- resources.dao.DAOTemporada : TemporadaDAO
  resources.service.DataService o-- resources.dao.DAOValoracioEstrella : ValoracioEstrellaDAO
  resources.service.DataService o-- resources.dao.DAOValoracioThumb : ValoracioThumbDAO
  resources.service.DataService o-- resources.dao.DAOClient : clientDAO
  resources.service.DataService o-- resources.dao.DAOFollowers : followersDAO
  resources.service.DataService o-- resources.dao.DAOFollowing : followingDAO
  resources.service.DataService o-- resources.dao.DAOMyList : mylistDAO
  resources.service.DataService o-- resources.dao.DAOPost : postDAO
  resources.service.DataService o-- resources.dao.DAOSerie : serieDAO
  resources.service.DataService o-- resources.dao.DAOUsuari : usuariDAO
  resources.service.DataService o-- resources.dao.DAOWatching : watchingDAO
  resources.service.FactoryMOCK .up.|> resources.service.AbstractFactoryData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
